<resources>
    <string name="app_name">My Calculator</string>
    <string name="Initial_display_number">0</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mplus">M+</string>
    <string name="m">M-</string>
    <string name="ms">MS</string>
    <string name="mm">M</string>
    <string name="percentage">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="bckspce">←</string>
    <string name="x">x²</string>
    <string name="underroot">√</string>
    <string name="percentagex">%x</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="sign">+/-</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="standard">Standard</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
</resources>