<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/txtMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iconHistory"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/history" />

            <ImageView
                android:id="@+id/iconSettings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/settings"
                android:src="@drawable/baseline_av_timer_24" />
        </LinearLayout>


        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@android:color/darker_gray"
            android:gravity="end"
            android:paddingTop="20dp"
            android:text="@string/Initial_display_number"
            android:textColor="#455A64"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingTop="3dp">


            <Button
                android:id="@+id/mc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/mc"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/mr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/mr"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/btnMPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/mplus"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnMMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/m"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnMS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/ms"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/mm"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:paddingHorizontal="16dp"
            android:rowCount="6"
            android:useDefaultMargins="true">


            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/percentage"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/ce"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/c"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/bckspce"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btnXSquared"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/x"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/underroot"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPercentX"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/percentagex"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/div"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_9"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/mul"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/minus"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="61dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_grey"
                android:text="@string/_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/plus"
                android:textSize="18sp" />


        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:backgroundTint="#12612810"
            android:text="@string/sign"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/_0"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:backgroundTint="#12612810"
            android:text="@string/decimal"
            android:textColor="#000000"
            android:textSize="18sp" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:text="@string/equal"
                android:textSize="18sp" />
        </GridLayout>
</LinearLayout>